<resources>
    <string name="app_name">ContactListAppProject</string>
    <string name="search">Search</string>
    <string name="delete_all_contacts">Delete All Contacts</string>
    <string name="sort_data">Sort Data</string>
    <string name="there_is_no_contact">There is no contact</string>
    <string name="add_contact">Add Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_contact_information">Add your contact information</string>
    <string name="save">Save</string>
    <string name="enter_the_phone_number">Digit the phone</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_action_can_t_be_undone_once_you_confirm">This action can\'t be undone once you confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">yes</string>
</resources>