<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/search"
        android:title="@string/search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/actionSort"
        android:icon="@drawable/sort"
        android:title="@string/sort_data"
        android:iconTint="@color/white"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/actionDeleteAll"
        android:icon="@drawable/delete"
        android:title="@string/delete_all_contacts"
        android:iconTint="@color/white"
        app:showAsAction="always"
        />
</menu>