<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_win"
    android:padding="16dp"
    tools:context=".ui.addfragment.AddContactFragment">

    <ImageView
        android:id="@+id/closeImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingHorizontal="32dp"
        android:text="@string/add_your_contact_information"
        android:textSize="16sp"
        android:textColor="@color/purple_400"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closeImage" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_the_name"
        android:minHeight="48dp"
        android:textStyle="italic"
        android:textColor="@color/purple_400"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColorHint="@color/purple_350"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        style="@style/CustomEditText" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_phone_number"
        android:textStyle="italic"
        android:textColorHint="@color/purple_350"
        android:textColor="@color/purple_400"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        style="@style/CustomEditText"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_300"
        app:cornerRadius="20dp"
        android:textSize="18sp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>